Updating job shop scheduling example

--- a/Job Shop Scheduling Problem (JSSP)/example.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "# Reading the JSSP instance file\n",
-    "problem = dict(utils.read_instance(\"instances/jssp_1\"))\n",
+    "problem = dict(utils.read_instance(f\"instances/jssp_1\"))\n",
     "\n",
     "# Some useful variables\n",
     "num_tasks = problem_gen.get_num_tasks(problem)\n",
@@ -176,7 +176,7 @@
     ")\n",
     "model.add_variable_vector('x', size, Vtype.BINARY)\n",
     "model.set_objective_matrices(weights, bias, Target.MINIMIZE)\n",
-    "response = model.optimize(timeout_in_secs=10, coupling_mult=0.75)"
+    "response = model.optimize(timeout_in_secs=10, coupling_mult=0.75, normalized=True)"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
