Updating portfolio optimization example to reflect API changes

--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -219,7 +219,7 @@
     "    print(\"     x:\", solution)\n",
     "    print(\"stocks:\", [tickers[i] for i in np.nonzero(solution)[0]])\n",
     "    print(\"weight:\", solution_weight)\n",
-    "    print(\"energy:\", response.metrics().get('ising_energy')[idx])\n",
+    "    print(\"energy:\", response.computation_metrics().get('solutions_objective_value')[idx])\n",
     "\n",
     "    # Check if this solution is valid\n",
     "    violations = verify_independent_set(J_matrix, solution, tickers)\n",
@@ -249,7 +249,7 @@
     "    print(\"     x:\", response.x[best_idx])\n",
     "    print(\"stocks:\", [tickers[i] for i in np.nonzero(response.x[best_idx])[0]])\n",
     "    print(\"weight:\", best_weight)\n",
-    "    print(\"energy:\", response.metrics().get('ising_energy')[best_idx])"
+    "    print(\"energy:\", response.computation_metrics().get('solutions_objective_value')[best_idx])"
    ]
   }
  ],
