Updating portfolio optimization example

--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import yfinance as yf\n",
     "import logging\n",
     "from utils import *\n",
     "from titanq import Model, Vtype, Target, S3Storage\n",
@@ -67,18 +68,32 @@
     "# Number of stocks in consideration (number of vertices in the graph)\n",
     "size = len(tickers)\n",
     "\n",
-    "# Compute the correlation matrix\n",
+    "# Fetch historical data from Yahoo Finance\n",
     "start_date = \"2010-01-01\"\n",
     "end_date = \"2023-12-31\"\n",
-    "corr_matrix = get_stock_corr_matrix(tickers, start=start_date, end=end_date, period='1YE')\n",
+    "period = 'Y'\n",
     "\n",
-    "# Compute the adjacency matrix of the market correlation graph\n",
+    "# Get daily closing prices\n",
+    "close_prices = yf.download(tickers, start=start_date, end=end_date)['Adj Close'][tickers]\n",
+    "\n",
+    "# Get periodic returns\n",
+    "daily_returns = get_stock_daily_returns(close_prices)\n",
+    "periodic_returns = daily_to_periodic_returns(daily_returns, period)\n",
+    "\n",
+    "# Compute correlation matrix and adjacency matrix\n",
+    "corr_matrix = get_stock_corr_matrix(periodic_returns)\n",
     "theta = 0.2\n",
     "J_matrix = corr_to_J_matrix(corr_matrix, theta)\n",
     "\n",
+    "# Compute (geometric) mean returns\n",
+    "mean_returns = get_stock_mean_returns(periodic_returns)\n",
+    "\n",
+    "# Compute standard deviations of returns\n",
+    "stds = get_stock_stds(periodic_returns)\n",
+    "\n",
     "# Set weights if no weights were specified in the instance file\n",
     "if weights is None:\n",
-    "    weights = np.round(np.array(get_annualized_stock_returns(tickers, 2010, 2023))).astype('float32')"
+    "    weights = np.round(mean_returns)"
    ]
   },
   {
@@ -180,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = model.optimize(beta = [0.1], coupling_mult=0.75, timeout_in_secs=5, num_chains = 8, num_engines = 1)"
+    "response = model.optimize(beta = [0.1], coupling_mult=0.75, timeout_in_secs=5, num_chains=8, num_engines=1)"
    ]
   },
   {
