Adding updated copyright notices and default API key settings
Signed-off-by: Brian Mao <157533110+brian-infinityq@users.noreply.github.com>

--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
+    "\n",
     "import numpy as np\n",
     "import yfinance as yf\n",
     "import logging\n",
@@ -34,7 +36,10 @@
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "TITANQ_DEV_API_KEY = \"Your API key\"\n",
+    "# Enter your API Key Here\n",
+    "# Obtain your API key by contacting --> support@infinityq.tech\n",
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
     "# AWS_ACCESS_KEY = \"Your Access key\"\n",
@@ -88,12 +93,9 @@
     "# Compute (geometric) mean returns\n",
     "mean_returns = get_stock_mean_returns(periodic_returns)\n",
     "\n",
-    "# Compute standard deviations of returns\n",
-    "stds = get_stock_stds(periodic_returns)\n",
-    "\n",
     "# Set weights if no weights were specified in the instance file\n",
     "if weights is None:\n",
-    "    weights = np.round(mean_returns)"
+    "    weights = np.round(np.array(mean_returns, dtype=np.float32))"
    ]
   },
   {
@@ -144,11 +146,7 @@
    "metadata": {},
    "source": [
     "## Inputting The Problem Into The TitanQ SDK\n",
-    "Here the user should provide the credentials they defined earlier. The user also defines the variables of the problem as well as the type of variable:\n",
-    "\n",
-    "- Vtype.BINARY if the variable is either 0 or 1\n",
-    "\n",
-    "- Vtype.BIPOLAR if the variable is either -1 or +1 (Coming soon)\n",
+    "Here the user should provide the credentials they defined earlier. The user also defines the variables of the problem as well as the type of variable.\n",
     "\n",
     "The user then injects the weights matrix and the bias vector into the SDK as the objective function to minimize. "
    ]
