--- a/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
+++ b/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
@@ -10,7 +10,7 @@
     "2. Select a time frame and frequency over which we will obtain historical data from (e.g. 2010 to 2015, monthly).\n",
     "3. Form the Market Correlation Graph (MCG) for the market index and solve the MWIS problem using TitanQ.\n",
     "4. Assign portfolio weights to the outputted MWIS problem solution to form the final portfolio.\n",
-    "5. Simulate the performance of the portfolio against the original market index over a future time frame (e.g. 2016 to 2017)."
+    "5. Evaluate the performance of the portfolio against the original market index over a future time frame (e.g. 2016 to 2017)."
    ]
   },
   {
@@ -19,6 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import yfinance as yf\n",
@@ -49,7 +51,10 @@
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "TITANQ_DEV_API_KEY = \"Your API key\""
+    "# Enter your API Key Here\n",
+    "# Obtain your API key by contacting --> support@infinityq.tech\n",
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = None"
    ]
   },
   {
@@ -107,15 +112,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Time frames for \"training\" the portfolio and for simulating its performance\n",
-    "training_start_date = \"2021-01-01\"\n",
-    "training_end_date = \"2021-12-31\"\n",
-    "simulation_start_date = \"2022-01-01\"\n",
-    "simulation_end_date = \"2022-12-31\"\n",
+    "# Time frames for \"training\" the portfolio and for evaluating its performance\n",
+    "model_start_date = \"2021-01-01\"\n",
+    "model_end_date = \"2021-12-31\"\n",
+    "evaluation_start_date = \"2022-01-01\"\n",
+    "evaluation_end_date = \"2022-12-31\"\n",
     "\n",
     "# Get close prices and returns for the training time period\n",
-    "close_prices_training = close_prices.loc[training_start_date:training_end_date]\n",
-    "returns = periodic_returns.loc[training_start_date:training_end_date]\n",
+    "close_prices_training = close_prices.loc[model_start_date:model_end_date]\n",
+    "returns = periodic_returns.loc[model_start_date:model_end_date]\n",
     "\n",
     "# Compute correlation matrix and adjacency matrix for the Market Correlation Graph (MCG)\n",
     "corr_matrix = get_stock_corr_matrix(returns)\n",
@@ -156,7 +161,15 @@
     "#############\n",
     "# TitanQ SDK\n",
     "#############\n",
-    "model = Model(api_key=TITANQ_DEV_API_KEY)\n",
+    "model = Model(\n",
+    "    api_key=TITANQ_DEV_API_KEY,     \n",
+    "    # Insert storage_client parameter and specify corresponding AWS keys and bucket name for solving very large problems\n",
+    "    # storage_client=S3Storage(\n",
+    "    #     access_key=AWS_ACCESS_KEY,\n",
+    "    #     secret_key=AWS_SECRET_ACCESS_KEY,\n",
+    "    #     bucket_name=AWS_BUCKET_NAME\n",
+    "    # )\n",
+    ")\n",
     "model.add_variable_vector('x', size, Vtype.BINARY)\n",
     "model.set_objective_matrices(weight_matrix, bias_vector, Target.MINIMIZE)"
    ]
@@ -168,12 +181,12 @@
    "outputs": [],
    "source": [
     "# TitanQ Solver Hyperparameters\n",
-    "coupling_mult = 0.05\n",
+    "coupling_mult = 0.03\n",
     "timeout_in_secs = 5\n",
     "num_chains = 32\n",
     "num_engines = 16\n",
     "Tmin = 0.05\n",
-    "Tmax = 5\n",
+    "Tmax = 1\n",
     "beta = (1/np.linspace(Tmin, Tmax, num_chains, dtype=np.float32)).tolist()\n",
     "\n",
     "response = model.optimize(beta=beta, coupling_mult=coupling_mult, timeout_in_secs=timeout_in_secs, num_chains=num_chains, num_engines=num_engines)"
@@ -197,31 +210,12 @@
     "best_idx = -1\n",
     "best_weight = 0\n",
     "\n",
-    "print(\"-------- ALL ENGINE RESULTS --------\")\n",
     "for idx, solution in enumerate(response.x):\n",
     "    solution_weight = weights.dot(solution)\n",
-    "    \n",
-    "    # Print all results\n",
-    "    print(f\"\\n--- Engine {idx + 1} ---\")\n",
-    "    print(\"stocks:\", [tickers[i] for i in np.nonzero(solution)[0]])\n",
-    "    print(\"weight:\", solution_weight)\n",
-    "    print(\"energy:\", response.computation_metrics().get('solutions_objective_value')[idx])\n",
     "\n",
-    "    # Check if this solution is valid\n",
-    "    violations = verify_independent_set(J_matrix, solution, tickers)\n",
-    "    if violations:\n",
-    "        print(\"This solution is not valid since the corresponding set of nodes is not independent.\")\n",
-    "        print(\"Try adjusting the hyperparameters further to yield a valid solution.\")\n",
-    "        print(\"The following vertices are connected:\")\n",
-    "        for pair in violations:\n",
-    "            print(pair)\n",
-    "    else:\n",
-    "        print(\"This solution is valid! The corresponding set of nodes is independent.\")\n",
-    "        \n",
-    "        # Check if this solution is the best valid one so far\n",
-    "        if best_idx == -1 or solution_weight > best_weight:\n",
-    "            best_idx = idx\n",
-    "            best_weight = solution_weight\n",
+    "    if best_idx == -1 or solution_weight > best_weight:\n",
+    "        best_idx = idx\n",
+    "        best_weight = solution_weight\n",
     "    \n",
     "        \n",
     "# Print the results of the best valid solution\n",
@@ -242,8 +236,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Portfolio Simulation\n",
-    "In this section we form an \"MWIS portfolio\" with the MWIS solution we obtained above, and we simulate its performance over a future time period."
+    "# Portfolio Performance\n",
+    "In this section we form an \"MWIS portfolio\" with the MWIS solution we obtained above, and we evaluate its performance over a future time period."
    ]
   },
   {
@@ -252,15 +246,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "close_prices_simulation = close_prices.loc[simulation_start_date:simulation_end_date]\n",
+    "close_prices_evaluation = close_prices.loc[evaluation_start_date:evaluation_end_date]\n",
     "\n",
     "# Portfolio with weights proportional to mean return/risk (same as node weights in the MCG for the MWIS problem)\n",
-    "portfolio_prices = close_prices_simulation[portfolio_stocks[0]] * weights[tickers.index(portfolio_stocks[0])]\n",
+    "portfolio_prices = close_prices_evaluation[portfolio_stocks[0]] * weights[tickers.index(portfolio_stocks[0])]\n",
     "portfolio_weights = [weights[tickers.index(portfolio_stocks[0])]]\n",
     "\n",
     "for i in range(1, len(portfolio_stocks)):\n",
     "    stock_weight = weights[tickers.index(portfolio_stocks[i])]\n",
-    "    portfolio_prices += close_prices_simulation[portfolio_stocks[i]] * stock_weight\n",
+    "    portfolio_prices += close_prices_evaluation[portfolio_stocks[i]] * stock_weight\n",
     "    portfolio_weights.append(stock_weight)\n",
     "    \n",
     "portfolio_prices /= np.sum(portfolio_weights)\n",
@@ -272,10 +266,10 @@
     "print(portfolio_df.to_string(index=False))\n",
     "\n",
     "# Daily closing prices of the index\n",
-    "index_close_prices_simulation = index_close_prices.loc[simulation_start_date:simulation_end_date]\n",
+    "index_close_prices_evaluation = index_close_prices.loc[evaluation_start_date:evaluation_end_date]\n",
     "\n",
     "# Dataframe with prices of the MWIS portfolio and the index\n",
-    "comparison_prices = pd.concat({\"MWIS Portfolio\": portfolio_prices, \"S&P 500\": index_close_prices_simulation}, axis=1)\n",
+    "comparison_prices = pd.concat({\"MWIS Portfolio\": portfolio_prices, \"S&P 500\": index_close_prices_evaluation}, axis=1)\n",
     "comparison_prices.fillna(method='ffill')\n",
     "comparison_returns = comparison_prices.ffill().pct_change()\n",
     "comparison_cumprod = comparison_returns.add(1).cumprod().sub(1)*100\n",
@@ -319,8 +313,8 @@
     "# Historical 1 month US treasury bill rates from 2010 to 2023\n",
     "rf_rates = {2010: 0.15, 2011: 0.06, 2012: 0.04, 2013: 0.04, 2014: 0.03, 2015: 0.02, 2016: 0.18, 2017: 0.74, 2018: 1.62,\n",
     "            2019: 2.43, 2020: 0.04, 2021: 0.01, 2022: 0.15, 2023: 4.70}\n",
-    "simulation_start_year = int(simulation_start_date[:4])\n",
-    "risk_free = rf_rates.get(simulation_start_year)/12\n",
+    "evaluation_start_year = int(evaluation_start_date[:4])\n",
+    "risk_free = rf_rates.get(evaluation_start_year)/12\n",
     "comparison_sharpe_ratios = (comparison_means - risk_free)/comparison_stds\n",
     "print(comparison_sharpe_ratios.to_string())"
    ]
@@ -342,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
