--- a/Job Shop Scheduling Problem (JSSP)/example_large.ipynb
+++ b/Job Shop Scheduling Problem (JSSP)/example_large.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
+    "\n",
     "import numpy as np\n",
     "import utils\n",
     "import problem_gen\n",
@@ -31,7 +33,10 @@
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "TITANQ_DEV_API_KEY=\"Enter your API Key Here\"\n",
+    "# Enter your API Key Here\n",
+    "# Obtain your API key by contacting --> support@infinityq.tech\n",
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
     "# AWS_ACCESS_KEY = \"Your Access key\"\n",
@@ -172,7 +177,13 @@
     "# TitanQ SDK\n",
     "############\n",
     "model_JSSP = Model(\n",
-    "    api_key=TITANQ_DEV_API_KEY\n",
+    "    api_key=TITANQ_DEV_API_KEY,\n",
+    "    # Insert storage_client parameter and specify corresponding AWS keys and bucket name for solving very large problems\n",
+    "    # storage_client=S3Storage(\n",
+    "    #     access_key=AWS_ACCESS_KEY,\n",
+    "    #     secret_key=AWS_SECRET_ACCESS_KEY,\n",
+    "    #     bucket_name=AWS_BUCKET_NAME\n",
+    "    # )\n",
     ")\n",
     "\n",
     "model_JSSP.add_variable_vector(\n",
@@ -308,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
