--- a/Warehouse Lending (Multiple Knapsack)/example.ipynb
+++ b/Warehouse Lending (Multiple Knapsack)/example.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Copyright (c) 2024, InfinityQ Technology Inc.\n",
+    "\n",
     "import copy\n",
     "import pprint\n",
     "import numpy as np\n",
@@ -34,7 +36,10 @@
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "TITANQ_DEV_API_KEY = \"Enter your API Key Here\"\n",
+    "# Enter your API Key Here\n",
+    "# Obtain your API key by contacting --> support@infinityq.tech\n",
+    "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
+    "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
     "# AWS_ACCESS_KEY = \"Your Access key\"\n",
@@ -382,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
