Additional updates to portfolio optimization example
Signed-off-by: Brian Mao <157533110+brian-infinityq@users.noreply.github.com>

--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -70,9 +70,6 @@
     "instance = \"simple example\"\n",
     "tickers, weights = read_instance(f\"instances/{instance}\")\n",
     "\n",
-    "# Number of stocks in consideration (number of vertices in the graph)\n",
-    "size = len(tickers)\n",
-    "\n",
     "# Fetch historical data from Yahoo Finance\n",
     "start_date = \"2010-01-01\"\n",
     "end_date = \"2023-12-31\"\n",
@@ -80,6 +77,12 @@
     "\n",
     "# Get daily closing prices\n",
     "close_prices = yf.download(tickers, start=start_date, end=end_date)['Adj Close'][tickers]\n",
+    "\n",
+    "# Prune delisted stocks\n",
+    "close_prices = close_prices.dropna(axis=1, how='all')\n",
+    "\n",
+    "# Number of stocks in consideration (number of vertices in the graph)\n",
+    "size = len(close_prices.columns)\n",
     "\n",
     "# Get periodic returns\n",
     "daily_returns = get_stock_daily_returns(close_prices)\n",
