--- a/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
+++ b/Portfolio Optimization/portfolio_strategy_backtesting.ipynb
@@ -74,9 +74,6 @@
     "instance = \"S&P 500\"\n",
     "tickers, weights = read_instance(f\"instances/{instance}\")\n",
     "\n",
-    "# Number of stocks in consideration (number of vertices in the graph)\n",
-    "size = len(tickers)\n",
-    "\n",
     "# Suggested: Set start_date and end_date to cover the entire time period you want to experiment on, so that you\n",
     "# only have to pull data from Yahoo Finance once (in this cell)\n",
     "# Recommended range is 2010-01-01 to 2023-12-31 for the S&P 500 instance\n",
@@ -88,6 +85,12 @@
     "\n",
     "# Get daily closing prices\n",
     "close_prices = yf.download(tickers, start=start_date, end=end_date)['Adj Close'][tickers]\n",
+    "\n",
+    "# Prune delisted stocks\n",
+    "close_prices = close_prices.dropna(axis=1, how='all')\n",
+    "\n",
+    "# Number of stocks in consideration (number of vertices in the graph)\n",
+    "size = len(close_prices.columns)\n",
     "\n",
     "# Get periodic returns\n",
     "daily_returns = get_stock_daily_returns(close_prices)\n",
@@ -336,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
