MQLib naming updates

--- a/MQLib Benchmarks/MQLib_Benchmarks.ipynb
+++ b/MQLib Benchmarks/MQLib_Benchmarks.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "import numpy as np\n",
     "import logging\n",
-    "from QCentroid_utils import *\n",
+    "from MQLib_utils import *\n",
     "from titanq import Model, Vtype, Target\n",
     "\n",
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
