Formatting updates across various examples

--- a/Maximum Clique/example.ipynb
+++ b/Maximum Clique/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your API Key Here\n",
+    "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
     "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
-    "# AWS_ACCESS_KEY = \"Your Access key\"\n",
-    "# AWS_SECRET_ACCESS_KEY = \"Your secret access key\"\n",
-    "# AWS_BUCKET_NAME = \"Your bucket name\""
+    "# AWS_ACCESS_KEY = \"Access Key\"\n",
+    "# AWS_SECRET_ACCESS_KEY = \"Secret Access Key\"\n",
+    "# AWS_BUCKET_NAME = \"Bucket Name\""
    ]
   },
   {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,9 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of vertices: N=125\n",
+      "-------- Adjacency Matrix --------\n",
+      "[[0. 1. 1. ... 1. 1. 1.]\n",
+      " [1. 0. 0. ... 1. 1. 1.]\n",
+      " [1. 0. 0. ... 1. 1. 1.]\n",
+      " ...\n",
+      " [1. 1. 1. ... 0. 1. 1.]\n",
+      " [1. 1. 1. ... 1. 0. 1.]\n",
+      " [1. 1. 1. ... 1. 1. 0.]]\n",
+      "----------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "# Display adjacency matrix from above\n",
     "print(f'Number of vertices: {N=}')\n",
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +200,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------- All Engine Results --------\n",
+      "\n",
+      "---- Engine 1 ----\n",
+      "\tClique Size = 34\t Clique = [4, 8, 10, 13, 16, 18, 23, 24, 28, 30, 33, 39, 43, 44, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 2 ----\n",
+      "\tClique Size = 34\t Clique = [0, 1, 4, 6, 8, 10, 17, 24, 28, 30, 33, 39, 43, 44, 47, 48, 53, 59, 67, 69, 70, 76, 78, 79, 98, 100, 109, 113, 114, 116, 120, 121, 122, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 3 ----\n",
+      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 12, 16, 18, 23, 24, 28, 30, 33, 43, 44, 48, 51, 53, 54, 65, 69, 76, 78, 79, 84, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 4 ----\n",
+      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 16, 18, 24, 28, 30, 33, 43, 44, 48, 51, 54, 65, 69, 76, 78, 79, 81, 84, 90, 95, 97, 102, 103, 109, 113, 116, 120, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 5 ----\n",
+      "\tClique Size = 34\t Clique = [4, 6, 8, 10, 16, 18, 23, 24, 28, 30, 33, 39, 43, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 81, 92, 95, 97, 102, 103, 109, 116, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 6 ----\n",
+      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 16, 18, 24, 28, 30, 33, 43, 44, 48, 51, 53, 54, 64, 65, 69, 76, 78, 79, 84, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 7 ----\n",
+      "\tClique Size = 34\t Clique = [4, 6, 8, 10, 12, 18, 24, 28, 30, 33, 43, 44, 48, 49, 51, 53, 54, 65, 66, 67, 69, 76, 79, 84, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
+      "\t which is a clique.\n",
+      "\n",
+      "---- Engine 8 ----\n",
+      "\tClique Size = 34\t Clique = [0, 4, 6, 8, 10, 12, 18, 24, 28, 30, 33, 39, 43, 44, 48, 51, 54, 65, 67, 69, 76, 78, 79, 90, 95, 97, 98, 102, 103, 109, 113, 116, 121, 124]\n",
+      "\t which is a clique.\n"
+     ]
+    }
+   ],
    "source": [
     "best_idx = -1\n",
     "best_size = 0\n",
@@ -206,9 +263,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "-------- Best Solution --------\n",
+      "---- Engine 1 ----\n",
+      "\tClique Size = 34\t Clique = [4, 8, 10, 13, 16, 18, 23, 24, 28, 30, 33, 39, 43, 44, 48, 51, 53, 54, 64, 65, 66, 69, 76, 78, 79, 95, 97, 98, 102, 103, 109, 116, 121, 124]\n"
+     ]
+    }
+   ],
    "source": [
     "print('\\n-------- Best Solution --------')\n",
     "if best_idx == -1:\n",
