--- a/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
+++ b/Quadratic Semi-Assignment Problem (QSAP)/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,22 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "# Enter your API Key Here\n",
+    "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
     "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
-    "# AWS_ACCESS_KEY = \"Your Access key\"\n",
-    "# AWS_SECRET_ACCESS_KEY = \"Your secret access key\"\n",
-    "# AWS_BUCKET_NAME = \"Your bucket name\""
+    "# AWS_ACCESS_KEY = \"Access Key\"\n",
+    "# AWS_SECRET_ACCESS_KEY = \"Secret Access Key\"\n",
+    "# AWS_BUCKET_NAME = \"Bucket Name\""
    ]
   },
   {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,27 +141,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate Inputs for the TitanQ SDK\n",
-    "\n",
-    "- weights\n",
-    "- bias\n",
-    "- constraint weights\n",
-    "- constraint bias"
+    "## Generate Inputs for the TitanQ SDK"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "weights = generate_weights(flow_matrix, distance_matrix)\n",
     "\n",
-    "bias = generate_bias(production_cost_matrix)\n",
+    "bias = generate_bias(production_cost_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model\n",
+    "model = Model(\n",
+    "    api_key=TITANQ_DEV_API_KEY,\n",
+    "    # Insert storage_client parameter and specify corresponding AWS keys and bucket name for solving very large problems\n",
+    "    # storage_client=S3Storage(\n",
+    "    #     access_key=AWS_ACCESS_KEY,\n",
+    "    #     secret_key=AWS_SECRET_ACCESS_KEY,\n",
+    "    #     bucket_name=AWS_BUCKET_NAME\n",
+    "    # )\n",
+    ")\n",
     "\n",
-    "constraint_weights = generate_constraint_weights(production_cost_matrix)\n",
+    "# Construct the problem\n",
+    "x = model.add_variable_vector('x', len(weights), Vtype.BINARY)\n",
+    "model.set_objective_matrices(weights, bias, Target.MINIMIZE)\n",
     "\n",
-    "constraint_bias = generate_constraint_bias(constraint_weights)"
+    "#Adding constraints using expressions\n",
+    "for i in range(len(distance_matrix)):\n",
+    "    expr = sum(x[4*i:4*i+4]) == 1\n",
+    "    model.add_constraint_from_expression(expr)"
    ]
   },
   {
@@ -189,30 +207,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------+--------------------------\n",
+      "Ising energy   | Result vector\n",
+      "---------------+--------------------------\n",
+      "25.000000      | [0. 1. 0. 0. 0. 0. 1. 0. 0. 0. 1. 0. 1. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Initialize the model\n",
-    "model = Model(\n",
-    "    api_key=TITANQ_DEV_API_KEY,\n",
-    "    # Insert storage_client parameter and specify corresponding AWS keys and bucket name for solving very large problems\n",
-    "    # storage_client=S3Storage(\n",
-    "    #     access_key=AWS_ACCESS_KEY,\n",
-    "    #     secret_key=AWS_SECRET_ACCESS_KEY,\n",
-    "    #     bucket_name=AWS_BUCKET_NAME\n",
-    "    # )\n",
-    ")\n",
-    "\n",
-    "# Construct the problem\n",
-    "model.add_variable_vector('x', len(weights), Vtype.BINARY)\n",
-    "model.set_objective_matrices(weights, bias, Target.MINIMIZE)\n",
-    "model.add_equality_constraints_matrix(constraint_weights, constraint_bias[:, 1])\n",
-    "\n",
     "# Set hyperparameters and call the solver\n",
     "num_chains = 128\n",
-    "beta = np.full(num_chains, 1)\n",
-    "response = model.optimize(beta=beta, timeout_in_secs=3, coupling_mult=50, num_engines=2, num_chains=num_chains)\n",
+    "\n",
+    "Tmin = 0.1\n",
+    "Tmax = 1000\n",
+    "beta = (1/np.linspace(Tmin, Tmax, num_chains, dtype=np.float32)).tolist()\n",
+    "response = model.optimize(beta=beta, timeout_in_secs=20, coupling_mult=50, num_engines=1, num_chains=num_chains)\n",
     "\n",
     "# Print the solution and keep track of state of lowest Ising energy\n",
     "print(\"-\" * 15, \"+\", \"-\" * 26, sep=\"\")\n",
@@ -241,9 +257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Material_1': 'Facility_2', 'Material_2': 'Facility_3', 'Material_3': 'Facility_3', 'Material_4': 'Facility_1'}\n"
+     ]
+    }
+   ],
    "source": [
     "result_matrix = reshape_result_vector(response.result_vector()[index], len(flow_matrix), len(distance_matrix))\n",
     "\n",
@@ -259,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "algorithms_repo_env",
    "language": "python",
    "name": "python3"
   },
@@ -273,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
