--- a/Portfolio Optimization/example.ipynb
+++ b/Portfolio Optimization/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,22 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "logging.getLogger('botocore').setLevel(logging.CRITICAL)\n",
     "logging.getLogger('urllib3').setLevel(logging.CRITICAL)\n",
     "\n",
-    "# Enter your API Key Here\n",
+    "# Enter your API key here\n",
     "# Obtain your API key by contacting --> support@infinityq.tech\n",
     "# Example: TITANQ_DEV_API_KEY = \"00000000-0000-0000-0000-000000000000\"\n",
     "TITANQ_DEV_API_KEY = None\n",
     "\n",
     "# Specify AWS keys and bucket name for solving very large problems\n",
-    "# AWS_ACCESS_KEY = \"Your Access key\"\n",
-    "# AWS_SECRET_ACCESS_KEY = \"Your secret access key\"\n",
-    "# AWS_BUCKET_NAME = \"Your bucket name\""
+    "# AWS_ACCESS_KEY = \"Access Key\"\n",
+    "# AWS_SECRET_ACCESS_KEY = \"Secret Access Key\"\n",
+    "# AWS_BUCKET_NAME = \"Bucket Name\""
    ]
   },
   {
@@ -62,9 +62,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  7 of 7 completed\n"
+     ]
+    }
+   ],
    "source": [
     "# Read in tickers and weights from the instance file\n",
     "instance = \"simple example\"\n",
@@ -103,9 +111,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~~~~~~~~~~~~~ Correlation Matrix ~~~~~~~~~~~~~\n",
+      "Ticker      AAPL      SHEL      TSLA       GIS       MCD        KO        BB\n",
+      "Ticker                                                                      \n",
+      "AAPL    0.000000 -0.205107  0.432150  0.155827  0.168842  0.148175  0.506853\n",
+      "SHEL   -0.205107  0.000000 -0.567325  0.105867  0.165332  0.219773  0.017018\n",
+      "TSLA    0.432150 -0.567325  0.000000  0.102988 -0.051367 -0.136086  0.120917\n",
+      "GIS     0.155827  0.105867  0.102988  0.000000  0.023428  0.519516 -0.162707\n",
+      "MCD     0.168842  0.165332 -0.051367  0.023428  0.000000  0.312786  0.244036\n",
+      "KO      0.148175  0.219773 -0.136086  0.519516  0.312786  0.000000 -0.040251\n",
+      "BB      0.506853  0.017018  0.120917 -0.162707  0.244036 -0.040251  0.000000\n",
+      "\n",
+      "~~~~~~~~~~~~~ Adjacency Matrix ~~~~~~~~~~~~~\n",
+      "[[0. 1. 1. 0. 0. 0. 1.]\n",
+      " [1. 0. 1. 0. 0. 1. 0.]\n",
+      " [1. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 1.]\n",
+      " [0. 1. 0. 1. 1. 0. 0.]\n",
+      " [1. 0. 0. 0. 1. 0. 0.]]\n",
+      "Graph density: 38.10%\n",
+      "\n",
+      "~~~~~~~~~~~~~ Weights ~~~~~~~~~~~~~\n",
+      "[ 27.   6.  43.   8.  15.   9. -19.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Display results of computations above\n",
     "print(\"~~~~~~~~~~~~~ Correlation Matrix ~~~~~~~~~~~~~\")\n",
@@ -131,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,23 +218,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, the user can call the optimize method on the model to solve the problem. The user can specify the maximum runtime of the solver (longer times have a higher probability of finding the optimal solution). They can also tune the other solver hyperparameters which are all defined in the README. These hyperparameters have the default values:\n",
-    "- *beta* = [0.1]\n",
-    "- *coupling_mult* = 0.5\n",
-    "- *timeout_in_secs* = 10\n",
-    "- *num_chains* = 8\n",
-    "- *num_engines* = 1\n",
-    "\n",
-    "Note that the length of the list *beta* should be either 1 or *num_chains*."
+    "Finally, the user can call the optimize method on the model to solve the problem. The user can specify the maximum runtime of the solver (longer times have a higher probability of finding the optimal solution). They can also tune the other solver hyperparameters which are all defined in the README."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = model.optimize(beta = [0.1], coupling_mult=0.75, timeout_in_secs=5, num_chains=8, num_engines=1)"
+    "# TitanQ Solver Hyperparameters\n",
+    "coupling_mult = 0.75\n",
+    "timeout_in_secs = 5\n",
+    "num_chains = 8\n",
+    "num_engines = 1\n",
+    "Tmin = 0.05\n",
+    "Tmax = 1\n",
+    "beta = (1/np.linspace(Tmin, Tmax, num_chains, dtype=np.float32)).tolist()\n",
+    "\n",
+    "response = model.optimize(beta = beta, coupling_mult=coupling_mult, timeout_in_secs=timeout_in_secs, num_chains=num_chains, num_engines=num_engines)"
    ]
   },
   {
@@ -218,9 +258,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------- ALL ENGINE RESULTS --------\n",
+      "\n",
+      "--- Engine 1 ---\n",
+      "     x: [0. 0. 1. 1. 1. 0. 0.]\n",
+      "stocks: ['TSLA', 'GIS', 'MCD']\n",
+      "weight: 66.0\n",
+      "energy: -1.3199999332427979\n",
+      "This solution is valid! The corresponding set of nodes is independent.\n",
+      "\n",
+      "-------- BEST VALID SOLUTION --------\n",
+      "--- Engine 1 ---\n",
+      "     x: [0. 0. 1. 1. 1. 0. 0.]\n",
+      "stocks: ['TSLA', 'GIS', 'MCD']\n",
+      "weight: 66.0\n",
+      "energy: -1.3199999332427979\n"
+     ]
+    }
+   ],
    "source": [
     "# Keep track of the index and the weight of the best solution\n",
     "best_idx = -1\n",
@@ -285,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
