--- a/Warehouse Lending (Multiple Knapsack)/example.ipynb
+++ b/Warehouse Lending (Multiple Knapsack)/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,11 +188,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_variables, weight_matrix, bias_vector, constraint_weight_matrix, constraint_bound_matrix = utils.gen_data(model.model_dict)"
+    "num_variables, weight_matrix, bias_vector = utils.gen_data(model.model_dict)"
    ]
   },
   {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,9 +220,13 @@
     "    #     bucket_name=AWS_BUCKET_NAME\n",
     "    # )\n",
     ")\n",
-    "titanq_model.add_variable_vector('x', num_variables, Vtype.BINARY)\n",
+    "x = titanq_model.add_variable_vector('x', num_variables, Vtype.BINARY)\n",
     "titanq_model.set_objective_matrices(weight_matrix, bias_vector, Target.MINIMIZE)\n",
-    "titanq_model.add_equality_constraints_matrix(constraint_weight_matrix, constraint_bound_matrix[:,0])"
+    "\n",
+    "# Add constraints as expression\n",
+    "for con in model.model_dict[\"hard_constraints\"]:\n",
+    "    expr = sum(var[1] * x[model.model_dict[\"name_id\"][var[0][0]]] for var in con[0]) == 1\n",
+    "    titanq_model.add_constraint_from_expression(expr)"
    ]
   },
   {
@@ -234,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,9 +283,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------- CHECKING SOLUTIONS --------\n",
+      "Best Assignment:  [1 0 1 0 1 1 1]\n",
+      "Best Solution Index:  0\n",
+      "\n",
+      "-------- Warehouse Dictionary After Loan Assignment --------\n",
+      "[{'available_funds': 496.0,\n",
+      "  'name': 'small_bank_0',\n",
+      "  'pools': [{'category': 'location',\n",
+      "             'current_pct': 0.04807692307692308,\n",
+      "             'limit_pct': 0.1,\n",
+      "             'name': 'quebec',\n",
+      "             'value': 5.0},\n",
+      "            {'category': 'location',\n",
+      "             'current_pct': 0.09615384615384616,\n",
+      "             'limit_pct': 0.1,\n",
+      "             'name': 'ontario',\n",
+      "             'value': 10.0},\n",
+      "            {'category': 'location',\n",
+      "             'current_pct': 0.04807692307692308,\n",
+      "             'limit_pct': 0.075,\n",
+      "             'name': 'nova_scotia',\n",
+      "             'value': 5.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.22115384615384615,\n",
+      "             'limit_pct': 0.25,\n",
+      "             'name': 'mortgage',\n",
+      "             'value': 23.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.04807692307692308,\n",
+      "             'limit_pct': 0.05,\n",
+      "             'name': 'car',\n",
+      "             'value': 5.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.07692307692307693,\n",
+      "             'limit_pct': 0.1,\n",
+      "             'name': 'small_business',\n",
+      "             'value': 8.0}],\n",
+      "  'total_loans': 104.0},\n",
+      " {'available_funds': 1461.0,\n",
+      "  'name': 'vc_fund_0',\n",
+      "  'pools': [{'category': 'location',\n",
+      "             'current_pct': 0.10009624639076034,\n",
+      "             'limit_pct': 0.11,\n",
+      "             'name': 'quebec',\n",
+      "             'value': 104.0},\n",
+      "            {'category': 'location',\n",
+      "             'current_pct': 0.2358036573628489,\n",
+      "             'limit_pct': 0.25,\n",
+      "             'name': 'california',\n",
+      "             'value': 245.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.07988450433108758,\n",
+      "             'limit_pct': 0.1,\n",
+      "             'name': 'mortgage',\n",
+      "             'value': 83.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.02021174205967276,\n",
+      "             'limit_pct': 0.05,\n",
+      "             'name': 'car',\n",
+      "             'value': 21.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.09432146294513956,\n",
+      "             'limit_pct': 0.1,\n",
+      "             'name': 'ai_startup',\n",
+      "             'value': 98.0},\n",
+      "            {'category': 'purpose',\n",
+      "             'current_pct': 0.18286814244465832,\n",
+      "             'limit_pct': 0.25,\n",
+      "             'name': 'blockchain_startup',\n",
+      "             'value': 190.0}],\n",
+      "  'total_loans': 1039.0}]\n"
+     ]
+    }
+   ],
    "source": [
     "solution_found = False\n",
     "best_objective = 0\n",
@@ -373,7 +455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -387,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
